# qrhiwidget_tri_minimal

./: CMakeLists.txt  README.md  main.cpp
